--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@ See our <A href="ccf.html"> "adopted" children </A>
 
 
 <tr><td>Sep 03</td><td class="has-text-align-left" data-align="left">Notre Dame      </td><td>7:30 ABC</td><td>W 21 - 10</td><td>----note----</td></tr>
-<tr><td>Sep 10</td><td class="has-text-align-left" data-align="left">Arkansas State  </td><td>Noon BTN</td><td></td><td></td></tr>
-<tr><td>Sep 17</td><td class="has-text-align-left" data-align="left">Toledo          </td><td>7:00 Fox</td><td></td><td></td></tr>
-<tr><td>Sep 24</td><td class="has-text-align-left" data-align="left">Wisconsin       </td><td>TBA </td><td></td><td></td></tr>
-<tr><td>Oct 01</td><td class="has-text-align-left" data-align="left">Rutgers         </td><td>3:30 </td><td></td><td></td></tr>
+<tr><td>Sep 10</td><td class="has-text-align-left" data-align="left">Arkansas State  </td><td>Noon BTN</td><td>W 45 - 12</td><td></td></tr>
+<tr><td>Sep 17</td><td class="has-text-align-left" data-align="left">Toledo          </td><td>7:00 Fox </td><td></td><td></td></tr>
+<tr><td>Sep 24</td><td class="has-text-align-left" data-align="left">Wisconsin       </td><td>7:30 ABC </td><td></td><td></td></tr>
+<tr><td>Oct 01</td><td class="has-text-align-left" data-align="left">Rutgers         </td><td>3:30 ABC </td><td></td><td></td></tr>
 <tr><td>Oct 08</td><td class="has-text-align-left" data-align="left">@ Michigan State</td><td>TBA </td><td></td><td></td></tr>
 <tr><td>Oct 15</td><td class="has-text-align-left" data-align="left"> BYE            </td><td>TBA </td><td></td><td></td></tr>
 <tr><td>Oct 22</td><td class="has-text-align-left" data-align="left">Iowa            </td><td>TBA </td><td></td><td></td></tr>
