--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ See our <A href="ccf.html"> "adopted" children </A>
 <tr><td>Nov 26</td><td class="has-text-align-left" data-align="left">scUM            </td><td>Noon Fox </td><td><font color = red>L 23 - 45 </font></td><td></td></tr>
 
 </table></center>
-<center><h3>Dec 31, 2022  Peach Bowl vs. Georgia  Playoff 8:00 ESPN W  - </h3></center>
+<center><h3>Dec 31, 2022  Peach Bowl vs. Georgia  Playoff 8:00 ESPN <font color = red>L 41 - 42 </font> </h3></center>
 <!-- /wp:table -->
 </table>
 <!--......................................................................................................-->
