--- a/index.html
+++ b/index.html
@@ -43,28 +43,26 @@ See our <A href="ccf.html"> "adopted" children </A>
 
 
 <!--......................................................................................................-->
-
-<center><h1> 2022 </h1><br></center>
+<center><h1> 2023 </h1><br></center>
 <table border="1" align="center" >
 
-<tr><td>Sep 03</td><td class="has-text-align-left" data-align="left">Notre Dame      </td><td>7:30 ABC</td><td>W 21 - 10</td><td>----note----</td></tr>
-<tr><td>Sep 10</td><td class="has-text-align-left" data-align="left">Arkansas State  </td><td>Noon BTN</td><td>W 45 - 12</td><td></td></tr>
-<tr><td>Sep 17</td><td class="has-text-align-left" data-align="left">Toledo          </td><td>7:00 Fox </td><td>W 77 - 21</td><td></td></tr>
-<tr><td>Sep 24</td><td class="has-text-align-left" data-align="left">Wisconsin       </td><td>7:30 ABC </td><td>W 52 - 21</td><td></td></tr>
-<tr><td>Oct 01</td><td class="has-text-align-left" data-align="left">Rutgers         </td><td>3:30 ABC </td><td>W 49 - 10</td><td></td></tr>
-<tr><td>Oct 08</td><td class="has-text-align-left" data-align="left">@ Michigan State</td><td>4:00 ABC </td><td>W 49 - 20</td><td></td></tr>
-<tr><td>Oct 15</td><td class="has-text-align-left" data-align="left"> BYE            </td><td>TBA </td><td></td><td></td></tr>
-<tr><td>Oct 22</td><td class="has-text-align-left" data-align="left">Iowa            </td><td>Noon Fox </td><td>W 54 - 10</td><td></td></tr>
-<tr><td>Oct 29</td><td class="has-text-align-left" data-align="left">@ Penn State    </td><td>Noon Fox </td><td>W 44 - 31</td><td></td></tr>
-<tr><td>Nov 05</td><td class="has-text-align-left" data-align="left">@ Northwestern  </td><td>Noon ABC </td><td>W 21 - 7</td><td></td></tr>
-<tr><td>Nov 12</td><td class="has-text-align-left" data-align="left">Indiana         </td><td>Noon </td><td>W 56 - 14</td><td></td></tr>
-<tr><td>Nov 19</td><td class="has-text-align-left" data-align="left">@ Maryland      </td><td>3:30 ABC </td><td>W 43 - 30</td><td></td></tr>
-<tr><td>Nov 26</td><td class="has-text-align-left" data-align="left">scUM            </td><td>Noon Fox </td><td><font color = red>L 23 - 45 </font></td><td></td></tr>
+<tr><td>Sep 02</td><td class="has-text-align-left" data-align="left"> @ Indiana      </td><td>Time and TV TBA........</td><td>W .....</td><td>note.............</td></tr>
+<tr><td>Sep 09</td><td class="has-text-align-left" data-align="left">Youngstown State </td><td></td><td></td><td></td></tr>
+<tr><td>Sep 16</td><td class="has-text-align-left" data-align="left">Western Kentucky</td><td></td><td></td><td></td></tr>
+<tr><td>Sep 23</td><td class="has-text-align-left" data-align="left">@ Notre Dame    </td><td></td><td></td><td></td></tr>
+<tr><td>Sep 30</td><td class="has-text-align-left" data-align="left">      bye       </td><td></td><td></td><td></td></tr>
+<tr><td>Oct 07</td><td class="has-text-align-left" data-align="left">Maryland        </td><td></td><td></td><td></td></tr>
+<tr><td>Oct 14</td><td class="has-text-align-left" data-align="left">@ Purdue        </td><td></td><td></td><td></td></tr>
+<tr><td>Oct 21</td><td class="has-text-align-left" data-align="left">Penn State      </td><td></td><td></td><td></td></tr>
+<tr><td>Oct 28</td><td class="has-text-align-left" data-align="left">@ Wisconsin     </td><td></td><td></td><td></td></tr>
+<tr><td>Nov 04</td><td class="has-text-align-left" data-align="left">@ Rutgers       </td><td></td><td></td><td></td></tr>
+<tr><td>Nov 11</td><td class="has-text-align-left" data-align="left">Michigan State  </td><td></td><td></td><td></td></tr>
+<tr><td>Nov 18</td><td class="has-text-align-left" data-align="left">Minnesota       </td><td></td><td></td><td></td></tr>
+<tr><td>Nov 25</td><td class="has-text-align-left" data-align="left">@ scUM          </td><td></td><td></td><td></td></tr>
 
-</table></center>
-<center><h3>Dec 31, 2022  Peach Bowl vs. Georgia  Playoff 8:00 ESPN <font color = red>L 41 - 42 </font> </h3></center>
 <!-- /wp:table -->
 </table>
+
 <!--......................................................................................................-->
 
 <h3>
