--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ See our <A href="ccf.html"> "adopted" children </A>
 <tr><td>Sep 09</td><td class="has-text-align-left" data-align="left">Youngstown State </td><td></td><td></td><td></td></tr>
 <tr><td>Sep 16</td><td class="has-text-align-left" data-align="left">Western Kentucky</td><td></td><td></td><td></td></tr>
 <tr><td>Sep 23</td><td class="has-text-align-left" data-align="left">@ Notre Dame    </td><td></td><td></td><td></td></tr>
-<tr><td>Sep 30</td><td class="has-text-align-left" data-align="left">      bye       </td><td></td><td></td><td></td></tr>
+<tr><td>Sep 30</td><td class="has-text-align-left" data-align="left">  ---- bye ---- </td><td></td><td></td><td></td></tr>
 <tr><td>Oct 07</td><td class="has-text-align-left" data-align="left">Maryland        </td><td></td><td></td><td></td></tr>
 <tr><td>Oct 14</td><td class="has-text-align-left" data-align="left">@ Purdue        </td><td></td><td></td><td></td></tr>
 <tr><td>Oct 21</td><td class="has-text-align-left" data-align="left">Penn State      </td><td></td><td></td><td></td></tr>
@@ -73,8 +73,6 @@ See our <A href="ccf.html"> "adopted" children </A>
 <!--img align=bottom alt="New!" src="Images/new3.gif"-->
 <center>
 
-<a href="osu2023.html"> 2023 Football schedule </a>
-<p>
 <a href="osu2024.html"> 2024 Football schedule </a>
 <p>
 <a href="osu2025.html"> 2025 Football schedule </a>
@@ -82,6 +80,8 @@ See our <A href="ccf.html"> "adopted" children </A>
 <a href="osu2026.html"> 2026 Football schedule </a>
 <p>
 <hr />
+<a href="osu22.html"> 2022 Football results </a>
+<p>
 <a href="osu21.html"> 2021 Football results </a>
 <p>
 <a href="osu20.html"> 2020 Football results </a>
