--- a/index.html
+++ b/index.html
@@ -46,19 +46,19 @@ See our <A href="ccf.html"> "adopted" children </A>
 <center><h1> 2023 </h1><br></center>
 <table border="1" align="center" >
 
-<tr><td>Sep 02</td><td class="has-text-align-left" data-align="left"> @ Indiana      </td><td>Time and TV TBA........</td><td>W .....</td><td>note.............</td></tr>
-<tr><td>Sep 09</td><td class="has-text-align-left" data-align="left">Youngstown State </td><td></td><td></td><td></td></tr>
-<tr><td>Sep 16</td><td class="has-text-align-left" data-align="left">Western Kentucky</td><td></td><td></td><td></td></tr>
-<tr><td>Sep 23</td><td class="has-text-align-left" data-align="left">@ Notre Dame    </td><td></td><td></td><td></td></tr>
+<tr><td>Sep 02</td><td class="has-text-align-left" data-align="left"> @ Indiana      </td><td>3:30 CBS</td><td>W .....</td><td>note.............</td></tr>
+<tr><td>Sep 09</td><td class="has-text-align-left" data-align="left">Youngstown State</td><td>Noon B1G</td><td></td><td></td></tr>
+<tr><td>Sep 16</td><td class="has-text-align-left" data-align="left">Western Kentucky</td><td>4:00 Fox</td><td></td><td></td></tr>
+<tr><td>Sep 23</td><td class="has-text-align-left" data-align="left">@ Notre Dame    </td><td>7:30 NBC</td><td></td><td></td></tr>
 <tr><td>Sep 30</td><td class="has-text-align-left" data-align="left">  ---- bye ---- </td><td></td><td></td><td></td></tr>
 <tr><td>Oct 07</td><td class="has-text-align-left" data-align="left">Maryland        </td><td></td><td></td><td></td></tr>
 <tr><td>Oct 14</td><td class="has-text-align-left" data-align="left">@ Purdue        </td><td></td><td></td><td></td></tr>
 <tr><td>Oct 21</td><td class="has-text-align-left" data-align="left">Penn State      </td><td></td><td></td><td></td></tr>
 <tr><td>Oct 28</td><td class="has-text-align-left" data-align="left">@ Wisconsin     </td><td></td><td></td><td></td></tr>
 <tr><td>Nov 04</td><td class="has-text-align-left" data-align="left">@ Rutgers       </td><td></td><td></td><td></td></tr>
-<tr><td>Nov 11</td><td class="has-text-align-left" data-align="left">Michigan State  </td><td></td><td></td><td></td></tr>
+<tr><td>Nov 11</td><td class="has-text-align-left" data-align="left">Michigan State  </td><td>7:30 NBC</td><td></td><td></td></tr>
 <tr><td>Nov 18</td><td class="has-text-align-left" data-align="left">Minnesota       </td><td></td><td></td><td></td></tr>
-<tr><td>Nov 25</td><td class="has-text-align-left" data-align="left">@ scUM          </td><td></td><td></td><td></td></tr>
+<tr><td>Nov 25</td><td class="has-text-align-left" data-align="left">@ scUM          </td><td>Noon Fox</td><td></td><td></td></tr>
 
 <!-- /wp:table -->
 </table>
