--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ See our <A href="ccf.html"> "adopted" children </A>
 <hr />
 <CENTER><!--IMG SRC="Images/bar_blue.gif" WIDTH="560" HEIGHT="11" ALT=""--></CENTER>
 
-<center><h2>OHIO STATE BUCKEYES <a href="https://www.ohiostatebuckeyes.com/sports/m-footbl/sched/osu-m-footbl-sched.html">Football </a> Schedule </h2></center>
+<center><h2>OHIO STATE BUCKEYES <a href="https://ohiostatebuckeyes.com/sports/football/schedule">Football </a> Schedule </h2></center>
 <center><img align=bottom alt="New!" src="Images/new3.gif"></center>
 
 
