--- a/index.html
+++ b/index.html
@@ -50,16 +50,15 @@ See our <A href="ccf.html"> "adopted" children </A>
 <tr><td>Sep 09</td><td class="has-text-align-left" data-align="left">Youngstown State</td><td>Noon B1G</td><td>W 35 - 7 </td><td></td></tr>
 <tr><td>Sep 16</td><td class="has-text-align-left" data-align="left">Western Kentucky</td><td>4:00 Fox</td><td>W 63 - 10 </td><td></td></tr>
 <tr><td>Sep 23</td><td class="has-text-align-left" data-align="left">@ Notre Dame    </td><td>7:30 NBC</td><td>W 17 - 14 </td><td></td></tr>
-<tr><td>Sep 30</td><td class="has-text-align-left" data-align="left">  ---- bye ---- </td><td></td><td></td><td></td></tr>
+<tr><td>Sep 30</td><td class="has-text-align-left" data-align="left">  ---- bye ---- </td><td> -- bye -- </td><td> -- bye -- </td><td> -- bye -- </td></tr>
 <tr><td>Oct 07</td><td class="has-text-align-left" data-align="left">Maryland        </td><td>Noon Fox</td><td>W 37 - 17 </td><td></td></tr>
 <tr><td>Oct 14</td><td class="has-text-align-left" data-align="left">@ Purdue        </td><td>Noon Peacock</td><td>W 41 - 7 </td><td> streaming only </td></tr>
 <tr><td>Oct 21</td><td class="has-text-align-left" data-align="left">Penn State      </td><td>Noon Fox </td><td>W 20 - 12 </td><td></td></tr>
 <tr><td>Oct 28</td><td class="has-text-align-left" data-align="left">@ Wisconsin     </td><td>7:30 NBC </td><td>W 24 - 10 </td><td>Henderson back</td></tr>
-<tr><td>Nov 04</td><td class="has-text-align-left" data-align="left">@ Rutgers       </td><td> </td><td></td><td> </td></tr>
+<tr><td>Nov 04</td><td class="has-text-align-left" data-align="left">@ Rutgers       </td><td>Noon CBS </td><td></td><td> </td></tr>
 <tr><td>Nov 11</td><td class="has-text-align-left" data-align="left">Michigan State  </td><td>7:30 NBC</td><td> </td><td></td></tr>
 <tr><td>Nov 18</td><td class="has-text-align-left" data-align="left">Minnesota       </td><td> </td><td> </td><td></td></tr>
 <tr><td>Nov 25</td><td class="has-text-align-left" data-align="left">@ scUM          </td><td>Noon Fox</td><td> </td><td></td></tr>
-
 
 <!-- /wp:table -->
 </table>
