--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@ See our <A href="ccf.html"> "adopted" children </A>
 <tr><td>Oct 14</td><td class="has-text-align-left" data-align="left">@ Purdue        </td><td>Noon Peacock</td><td>W 41 - 7 </td><td> streaming only </td></tr>
 <tr><td>Oct 21</td><td class="has-text-align-left" data-align="left">Penn State      </td><td>Noon Fox </td><td>W 20 - 12 </td><td></td></tr>
 <tr><td>Oct 28</td><td class="has-text-align-left" data-align="left">@ Wisconsin     </td><td>7:30 NBC </td><td>W 24 - 10 </td><td>Henderson back</td></tr>
-<tr><td>Nov 04</td><td class="has-text-align-left" data-align="left">@ Rutgers       </td><td>Noon CBS </td><td>W </td><td> </td></tr>
-<tr><td>Nov 11</td><td class="has-text-align-left" data-align="left">Michigan State  </td><td>7:30 NBC</td><td>W </td><td></td></tr>
-<tr><td>Nov 18</td><td class="has-text-align-left" data-align="left">Minnesota       </td><td> </td><td>W </td><td></td></tr>
+<tr><td>Nov 04</td><td class="has-text-align-left" data-align="left">@ Rutgers       </td><td>Noon CBS </td><td>W 35 - 16 </td><td> </td></tr>
+<tr><td>Nov 11</td><td class="has-text-align-left" data-align="left">Michigan State  </td><td>7:30 NBC</td><td>W 38 - 3 </td><td></td></tr>
+<tr><td>Nov 18</td><td class="has-text-align-left" data-align="left">Minnesota       </td><td> </td><td>W 37 - 3 </td><td></td></tr>
 <tr><td>Nov 25</td><td class="has-text-align-left" data-align="left">@ scUM          </td><td>Noon Fox</td><td><font color = red>L 24 - 30 </td><td></td></tr>
 
 
