--- a/index.html
+++ b/index.html
@@ -60,10 +60,12 @@ See our <A href="ccf.html"> "adopted" children </A>
 <tr><td>Nov 18</td><td class="has-text-align-left" data-align="left">Minnesota       </td><td>4:00 BTN </td><td>W 37 - 3 </td><td></td></tr>
 <tr><td>Nov 25</td><td class="has-text-align-left" data-align="left">@ scUM          </td><td>Noon Fox</td><td><font color = red>L 24 - 30 </td><td></td></tr>
 
-
 <!-- /wp:table -->
 </table>
-
+</table></center>
+<center><h3>Dec 29, 2023  Cotton Bowl vs. Missouri 8:00 ESPN <font color = red>WL  -  </font> </h3></center>
+<!-- /wp:table -->
+</table>
 <!--......................................................................................................-->
 
 <h3>
