--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@ See our <A href="ccf.html"> "adopted" children </A>
 <!-- /wp:table -->
 </table>
 <!--......................................................................................................-->
-
+<p><center> and M*ch*g*n still sucks!</center>
+  <br></p>
 <h3>
 <hr />
 <center><A href="OSU/osu_seat.jpg">Ohio Stadium seating chart </A> </center>
