--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@ See our <A href="ccf.html"> "adopted" children </A>
 <!-- /wp:table -->
 </table>
 </table></center>
-<center><h3>Dec 29, 2023  Cotton Bowl vs. Missouri 8:00 ESPN <font color = red>WL  -  </font> </h3></center>
+<center><h3>Dec 29, 2023  Cotton Bowl vs. Missouri 8:00 ESPN <font color = red>L 3 - 14 </font> </h3></center>
 <!-- /wp:table -->
 </table>
 <!--......................................................................................................-->
