--- a/index.html
+++ b/index.html
@@ -43,26 +43,27 @@ See our <A href="ccf.html"> "adopted" children </A>
 
 
 <!--......................................................................................................-->
-<center><h1> 2023 </h1><br></center>
+<center><h1> 2024 </h1><br></center>
 <table border="1" align="center" >
 
-<tr><td>Sep 02</td><td class="has-text-align-left" data-align="left"> @ Indiana      </td><td>3:30 CBS</td><td>W 23 - 3 </td><td>note.............</td></tr>
-<tr><td>Sep 09</td><td class="has-text-align-left" data-align="left">Youngstown State</td><td>Noon B1G</td><td>W 35 - 7 </td><td></td></tr>
-<tr><td>Sep 16</td><td class="has-text-align-left" data-align="left">Western Kentucky</td><td>4:00 Fox</td><td>W 63 - 10 </td><td></td></tr>
-<tr><td>Sep 23</td><td class="has-text-align-left" data-align="left">@ Notre Dame    </td><td>7:30 NBC</td><td>W 17 - 14 </td><td></td></tr>
-<tr><td>Sep 30</td><td class="has-text-align-left" data-align="left">  ---- bye ---- </td><td> -- bye -- </td><td> -- bye -- </td><td> -- bye -- </td></tr>
-<tr><td>Oct 07</td><td class="has-text-align-left" data-align="left">Maryland        </td><td>Noon Fox</td><td>W 37 - 17 </td><td></td></tr>
-<tr><td>Oct 14</td><td class="has-text-align-left" data-align="left">@ Purdue        </td><td>Noon Peacock</td><td>W 41 - 7 </td><td> streaming only </td></tr>
-<tr><td>Oct 21</td><td class="has-text-align-left" data-align="left">Penn State      </td><td>Noon Fox </td><td>W 20 - 12 </td><td></td></tr>
-<tr><td>Oct 28</td><td class="has-text-align-left" data-align="left">@ Wisconsin     </td><td>7:30 NBC </td><td>W 24 - 10 </td><td>Henderson back</td></tr>
-<tr><td>Nov 04</td><td class="has-text-align-left" data-align="left">@ Rutgers       </td><td>Noon CBS </td><td>W 35 - 16 </td><td> </td></tr>
-<tr><td>Nov 11</td><td class="has-text-align-left" data-align="left">Michigan State  </td><td>7:30 NBC</td><td>W 38 - 3 </td><td></td></tr>
-<tr><td>Nov 18</td><td class="has-text-align-left" data-align="left">Minnesota       </td><td> </td><td> 37 - 3</td><td></td></tr>
-<tr><td>Nov 25</td><td class="has-text-align-left" data-align="left">@ scUM          </td><td>Noon Fox</td><td><font color = red>L 24 - 30 </font> </td><td></td></tr>
+<tr><td>Aug 31</td><td class="has-text-align-left" data-align="left">Akron           </td><td>3:30 CBS</td><td>W  </td><td>note.............</td></tr>
+<tr><td>Sep 07</td><td class="has-text-align-left" data-align="left">Western Michigan</td><td>7:30 B1G</td><td>W  </td><td></td></tr>
+<tr><td>Sep 14</td><td class="has-text-align-left" data-align="left">  ---- bye ---- </td><td> -- bye -- </td><td> -- bye -- </td><td> -- bye -- </td></tr>
+<tr><td>Sep 21</td><td class="has-text-align-left" data-align="left">Marshall        </td><td> TBA</td><td>W  </td><td></td></tr>
+<tr><td>Sep 28</td><td class="has-text-align-left" data-align="left">@ Michigan State</td><td>TBA</td><td>W  </td><td></td></tr>
+<tr><td>Oct 05</td><td class="has-text-align-left" data-align="left">Iowa            </td><td>TBA</td><td>W  </td><td></td></tr>
+<tr><td>Oct 12</td><td class="has-text-align-left" data-align="left">@ Oregon        </td><td>TBA</td><td>W  </td><td>  </td></tr>
+<tr><td>Oct 19</td><td class="has-text-align-left" data-align="left">----- bye----   </td><td>-- bye -- </td><td> -- bye -- </td><td></td></tr>
+<tr><td>Oct 26</td><td class="has-text-align-left" data-align="left">Nebraska        </td><td>TBA </td><td>W  </td><td>Henderson back</td></tr>
+<tr><td>Nov 02</td><td class="has-text-align-left" data-align="left">@ Penn State    </td><td>TBA </td><td>W  </td><td> </td></tr>
+<tr><td>Nov 09</td><td class="has-text-align-left" data-align="left">Purdue          </td><td>TBA</td><td>W  </td><td></td></tr>
+<tr><td>Nov 16</td><td class="has-text-align-left" data-align="left">@ Northwestern  </td><td> TBA </td><td> W</td><td>Wrigley Field</td></tr>
+<tr><td>Nov 23</td><td class="has-text-align-left" data-align="left">Indiana         </td><td>TBA</td><td>W  </td><td></td></tr>
+<tr><td>Nov 30</td><td class="has-text-align-left" data-align="left">@ scUM          </td><td>Noon Fox</td><td>W  </td><td></td></tr>
 
 
 </table></center>
-<center><h3>Dec 29, 2023  Cotton Bowl vs. Missouri 8:00 ESPN <font color = red>L 3 - 14 </font> </h3></center>
+<center><h3> Some Bowl vs. ??? W 99 - 1  </h3></center>
 <!-- /wp:table -->
 </table>
 <!--......................................................................................................-->
@@ -76,12 +77,14 @@ See our <A href="ccf.html"> "adopted" children </A>
 <!--img align=bottom alt="New!" src="Images/new3.gif"-->
 <center>
 
-<a href="osu2024.html"> 2024 Football schedule </a>
-<p>
 <a href="osu2025.html"> 2025 Football schedule </a>
 <p>
 <a href="osu2026.html"> 2026 Football schedule </a>
 <p>
+<a href="osu2027.html"> 2027 Football schedule </a>
+<p>
+ <hr />
+<a href="osu23.html"> 2023 Football results </a>
 <hr />
 <a href="osu22.html"> 2022 Football results </a>
 <p>
