--- a/index.html
+++ b/index.html
@@ -48,19 +48,18 @@ See our <A href="ccf.html"> "adopted" children </A>
 
 <tr><td>Aug 31</td><td class="has-text-align-left" data-align="left">Akron           </td><td>3:30 CBS</td><td>W  </td><td>note.............</td></tr>
 <tr><td>Sep 07</td><td class="has-text-align-left" data-align="left">Western Michigan</td><td>7:30 B1G</td><td>W  </td><td></td></tr>
-<tr><td>Sep 14</td><td class="has-text-align-left" data-align="left">  ---- bye ---- </td><td> -- bye -- </td><td> -- bye -- </td><td> -- bye -- </td></tr>
+<tr><td>Sep 14</td><td class="has-text-align-left" data-align="left"> ---- bye ----  </td><td> -- bye -- </td><td> -- bye -- </td><td> -- bye -- </td></tr>
 <tr><td>Sep 21</td><td class="has-text-align-left" data-align="left">Marshall        </td><td> TBA</td><td>W  </td><td></td></tr>
 <tr><td>Sep 28</td><td class="has-text-align-left" data-align="left">@ Michigan State</td><td>TBA</td><td>W  </td><td></td></tr>
 <tr><td>Oct 05</td><td class="has-text-align-left" data-align="left">Iowa            </td><td>TBA</td><td>W  </td><td></td></tr>
 <tr><td>Oct 12</td><td class="has-text-align-left" data-align="left">@ Oregon        </td><td>TBA</td><td>W  </td><td>  </td></tr>
-<tr><td>Oct 19</td><td class="has-text-align-left" data-align="left">----- bye----   </td><td>-- bye -- </td><td> -- bye -- </td><td></td></tr>
-<tr><td>Oct 26</td><td class="has-text-align-left" data-align="left">Nebraska        </td><td>TBA </td><td>W  </td><td>Henderson back</td></tr>
+<tr><td>Oct 19</td><td class="has-text-align-left" data-align="left"> ---- bye ----  </td><td>-- bye -- </td><td> -- bye -- </td><td> -- bye -- </td></tr>
+<tr><td>Oct 26</td><td class="has-text-align-left" data-align="left">Nebraska        </td><td>TBA </td><td>W  </td><td></td></tr>
 <tr><td>Nov 02</td><td class="has-text-align-left" data-align="left">@ Penn State    </td><td>TBA </td><td>W  </td><td> </td></tr>
 <tr><td>Nov 09</td><td class="has-text-align-left" data-align="left">Purdue          </td><td>TBA</td><td>W  </td><td></td></tr>
 <tr><td>Nov 16</td><td class="has-text-align-left" data-align="left">@ Northwestern  </td><td> TBA </td><td> W</td><td>Wrigley Field</td></tr>
 <tr><td>Nov 23</td><td class="has-text-align-left" data-align="left">Indiana         </td><td>TBA</td><td>W  </td><td></td></tr>
 <tr><td>Nov 30</td><td class="has-text-align-left" data-align="left">@ scUM          </td><td>Noon Fox</td><td>W  </td><td></td></tr>
-
 
 </table></center>
 <center><h3> Some Bowl vs. ??? W 99 - 1  </h3></center>
