--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@ See our <A href="ccf.html"> "adopted" children </A>
 <center><h1> 2024 </h1><br></center>
 <table border="1" align="center" >
 
-<tr><td>Aug 31</td><td class="has-text-align-left" data-align="left">Akron           </td><td>3:30 CBS</td><td>W  </td><td>note.............</td></tr>
-<tr><td>Sep 07</td><td class="has-text-align-left" data-align="left">Western Michigan</td><td>7:30 B1G</td><td>W  </td><td></td></tr>
+<tr><td>Aug 31</td><td class="has-text-align-left" data-align="left">Akron           </td><td>3:30 CBS</td><td>W 52 - 6 </td><td>note.............</td></tr>
+<tr><td>Sep 07</td><td class="has-text-align-left" data-align="left">Western Michigan</td><td>7:30 B1G</td><td>W  - </td><td></td></tr>
 <tr><td>Sep 14</td><td class="has-text-align-left" data-align="left"> ---- bye ----  </td><td> -- bye -- </td><td> -- bye -- </td><td> -- bye -- </td></tr>
 <tr><td>Sep 21</td><td class="has-text-align-left" data-align="left">Marshall        </td><td> TBA</td><td>W  </td><td></td></tr>
 <tr><td>Sep 28</td><td class="has-text-align-left" data-align="left">@ Michigan State</td><td>TBA</td><td>W  </td><td></td></tr>
