--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ See our <A href="ccf.html"> "adopted" children </A>
 <tr><td>Sep 07</td><td class="has-text-align-left" data-align="left">Western Michigan </td><td>7:30 B1G     </td><td>W 56 - 0 </td><td></td></tr>
 <tr><td>Sep 14</td><td class="has-text-align-left" data-align="left"> ---- bye ----  </td><td> -- bye --    </td><td> -- bye -- </td><td> -- bye -- </td></tr>
 <tr><td>Sep 21</td><td class="has-text-align-left" data-align="left">Marshall        </td><td> Noon Fox     </td><td>W 49 - 14 </td><td></td></tr>
-<tr><td>Sep 28</td><td class="has-text-align-left" data-align="left">@ Michigan State </td><td>7:00 Peacock </td><td>W  </td><td></td></tr>
+<tr><td>Sep 28</td><td class="has-text-align-left" data-align="left">@ Michigan State </td><td> 7:30 Peacock </td><td>W 38 - 7 </td><td></td></tr>
 <tr><td>Oct 05</td><td class="has-text-align-left" data-align="left">Iowa            </td><td> 3:30 CBS     </td><td>W  </td><td></td></tr>
 <tr><td>Oct 12</td><td class="has-text-align-left" data-align="left">@ Oregon        </td><td>TBA  </td><td>W  </td><td>  </td></tr>
 <tr><td>Oct 19</td><td class="has-text-align-left" data-align="left"> ---- bye ----  </td><td>-- bye -- </td><td> -- bye -- </td><td> -- bye -- </td></tr>
