--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ See our <A href="ccf.html"> "adopted" children </A>
 <tr><td>Sep 21</td><td class="has-text-align-left" data-align="left">Marshall        </td><td> Noon Fox     </td><td>W 49 - 14 </td><td></td></tr>
 <tr><td>Sep 28</td><td class="has-text-align-left" data-align="left">@ Michigan State </td><td> 7:30 Peacock </td><td>W 38 - 7 </td><td></td></tr>
 <tr><td>Oct 05</td><td class="has-text-align-left" data-align="left">Iowa            </td><td> 3:30 CBS     </td><td>W  </td><td></td></tr>
-<tr><td>Oct 12</td><td class="has-text-align-left" data-align="left">@ Oregon        </td><td>TBA  </td><td>W  </td><td>  </td></tr>
+<tr><td>Oct 12</td><td class="has-text-align-left" data-align="left">@ Oregon        </td><td> 7:30 NBC  </td><td>W  </td><td>  </td></tr>
 <tr><td>Oct 19</td><td class="has-text-align-left" data-align="left"> ---- bye ----  </td><td>-- bye -- </td><td> -- bye -- </td><td> -- bye -- </td></tr>
 <tr><td>Oct 26</td><td class="has-text-align-left" data-align="left">Nebraska        </td><td>TBA </td><td>W  </td><td></td></tr>
 <tr><td>Nov 02</td><td class="has-text-align-left" data-align="left">@ Penn State    </td><td>TBA </td><td>W  </td><td> </td></tr>
