--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@ See our <A href="ccf.html"> "adopted" children </A>
 <tr><td>Sep 21</td><td class="has-text-align-left" data-align="left">Marshall        </td><td> Noon Fox     </td><td>W 49 - 14 </td><td></td></tr>
 <tr><td>Sep 28</td><td class="has-text-align-left" data-align="left">@ Michigan State </td><td> 7:30 Peacock </td><td>W 38 - 7 </td><td></td></tr>
 <tr><td>Oct 05</td><td class="has-text-align-left" data-align="left">Iowa            </td><td> 3:30 CBS     </td><td>W 35 - 7 </td><td></td></tr>
-<tr><td>Oct 12</td><td class="has-text-align-left" data-align="left">@ Oregon        </td><td> 7:30 NBC  </td><td><font color = red>L 31 - 32 </font> </td><td>  </td></tr>
-<tr><td>Oct 19</td><td class="has-text-align-left" data-align="left"> ---- bye ----  </td><td>-- bye -- </td><td> -- bye -- </td><td> -- bye -- </td></tr>
-<tr><td>Oct 26</td><td class="has-text-align-left" data-align="left">Nebraska        </td><td>Noon Fox </td><td>W 21 - 17 </td><td></td></tr>
-<tr><td>Nov 02</td><td class="has-text-align-left" data-align="left">@ Penn State    </td><td>Noon Fox </td><td>W 20 - 13 </td><td> </td></tr>
-<tr><td>Nov 09</td><td class="has-text-align-left" data-align="left">Purdue          </td><td>Noon Fox</td><td>W 45 - 0  </td><td></td></tr>
-<tr><td>Nov 16</td><td class="has-text-align-left" data-align="left">@ Northwestern  </td><td>Noon BTN </td><td> W</td><td>Wrigley Field</td></tr>
-<tr><td>Nov 23</td><td class="has-text-align-left" data-align="left">Indiana         </td><td>TBA</td><td>W  </td><td></td></tr>
-<tr><td>Nov 30</td><td class="has-text-align-left" data-align="left">@ scUM          </td><td>Noon Fox</td><td>W  </td><td></td></tr>
+<tr><td>Oct 12</td><td class="has-text-align-left" data-align="left">@ Oregon        </td><td> 7:30 NBC     </td><td><font color = red>L 31 - 32 </font> </td><td>  </td></tr>
+<tr><td>Oct 19</td><td class="has-text-align-left" data-align="left"> ---- bye ----  </td><td>-- bye --     </td><td> -- bye -- </td><td> -- bye -- </td></tr>
+<tr><td>Oct 26</td><td class="has-text-align-left" data-align="left">Nebraska        </td><td>Noon Fox      </td><td>W 21 - 17 </td><td></td></tr>
+<tr><td>Nov 02</td><td class="has-text-align-left" data-align="left">@ Penn State    </td><td>Noon Fox      </td><td>W 20 - 13 </td><td> </td></tr>
+<tr><td>Nov 09</td><td class="has-text-align-left" data-align="left">Purdue          </td><td>Noon Fox      </td><td>W 45 - 0  </td><td></td></tr>
+<tr><td>Nov 16</td><td class="has-text-align-left" data-align="left">@ Northwestern  </td><td>Noon BTN      </td><td> W</td><td>Wrigley Field</td></tr>
+<tr><td>Nov 23</td><td class="has-text-align-left" data-align="left">Indiana         </td><td>Noon Fox      </td><td>W  </td><td></td></tr>
+<tr><td>Nov 30</td><td class="has-text-align-left" data-align="left">@ scUM          </td><td>Noon Fox      </td><td>W  </td><td></td></tr>
 
 </table></center>
 <center><h3> Some Bowl vs. ??? W 99 - 1  </h3></center>
