--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ See our <A href="ccf.html"> "adopted" children </A>
 <tr><td>Oct 26</td><td class="has-text-align-left" data-align="left">Nebraska        </td><td>Noon Fox      </td><td>W 21 - 17 </td><td></td></tr>
 <tr><td>Nov 02</td><td class="has-text-align-left" data-align="left">@ Penn State    </td><td>Noon Fox      </td><td>W 20 - 13 </td><td> </td></tr>
 <tr><td>Nov 09</td><td class="has-text-align-left" data-align="left">Purdue          </td><td>Noon Fox      </td><td>W 45 - 0  </td><td></td></tr>
-<tr><td>Nov 16</td><td class="has-text-align-left" data-align="left">@ Northwestern  </td><td>Noon BTN      </td><td> W</td><td>Wrigley Field</td></tr>
+<tr><td>Nov 16</td><td class="has-text-align-left" data-align="left">@ Northwestern  </td><td>Noon BTN      </td><td> W 31 - 7 </td><td>Wrigley Field</td></tr>
 <tr><td>Nov 23</td><td class="has-text-align-left" data-align="left">Indiana         </td><td>Noon Fox      </td><td>W  </td><td></td></tr>
 <tr><td>Nov 30</td><td class="has-text-align-left" data-align="left">@ scUM          </td><td>Noon Fox      </td><td>W  </td><td></td></tr>
 
