--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@ See our <A href="ccf.html"> "adopted" children </A>
 <table border="1" align="center" >
 
 <tr><td>Aug 31</td><td class="has-text-align-left" data-align="left">Akron           </td><td>3:30 CBS      </td><td>W 52 - 6 </td><td>note.............</td></tr>
-<tr><td>Sep 07</td><td class="has-text-align-left" data-align="left">Western Michigan </td><td>7:30 B1G     </td><td>W 56 - 0 </td><td></td></tr>
+<tr><td>Sep 07</td><td class="has-text-align-left" data-align="left">Western Michigan</td><td>7:30 B1G      </td><td>W 56 - 0 </td><td></td></tr>
 <tr><td>Sep 14</td><td class="has-text-align-left" data-align="left"> ---- bye ----  </td><td> -- bye --    </td><td> -- bye -- </td><td> -- bye -- </td></tr>
 <tr><td>Sep 21</td><td class="has-text-align-left" data-align="left">Marshall        </td><td> Noon Fox     </td><td>W 49 - 14 </td><td></td></tr>
-<tr><td>Sep 28</td><td class="has-text-align-left" data-align="left">@ Michigan State </td><td> 7:30 Peacock </td><td>W 38 - 7 </td><td></td></tr>
+<tr><td>Sep 28</td><td class="has-text-align-left" data-align="left">@ Michigan State</td><td> 7:30 Peacock </td><td>W 38 - 7 </td><td></td></tr>
 <tr><td>Oct 05</td><td class="has-text-align-left" data-align="left">Iowa            </td><td> 3:30 CBS     </td><td>W 35 - 7 </td><td></td></tr>
 <tr><td>Oct 12</td><td class="has-text-align-left" data-align="left">@ Oregon        </td><td> 7:30 NBC     </td><td><font color = red>L 31 - 32 </font> </td><td>  </td></tr>
 <tr><td>Oct 19</td><td class="has-text-align-left" data-align="left"> ---- bye ----  </td><td>-- bye --     </td><td> -- bye -- </td><td> -- bye -- </td></tr>
@@ -59,7 +59,7 @@ See our <A href="ccf.html"> "adopted" children </A>
 <tr><td>Nov 09</td><td class="has-text-align-left" data-align="left">Purdue          </td><td>Noon Fox      </td><td>W 45 - 0  </td><td></td></tr>
 <tr><td>Nov 16</td><td class="has-text-align-left" data-align="left">@ Northwestern  </td><td>Noon BTN      </td><td> W 31 - 7 </td><td>Wrigley Field</td></tr>
 <tr><td>Nov 23</td><td class="has-text-align-left" data-align="left">Indiana         </td><td>Noon Fox      </td><td>W 38 - 15 </td><td></td></tr>
-<tr><td>Nov 30</td><td class="has-text-align-left" data-align="left">@ scUM          </td><td>Noon Fox      </td><td>W  </td><td></td></tr>
+<tr><td>Nov 30</td><td class="has-text-align-left" data-align="left">scUM            </td><td>Noon Fox      </td><td>W  </td><td></td></tr>
 
 </table></center>
 <center><h3> Some Bowl vs. ??? W 99 - 1  </h3></center>
