--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@ See our <A href="ccf.html"> "adopted" children </A>
 <tr><td>Nov 16</td><td class="has-text-align-left" data-align="left">@ Northwestern  </td><td>Noon BTN      </td><td> W 31 - 7 </td><td>Wrigley Field</td></tr>
 <tr><td>Nov 23</td><td class="has-text-align-left" data-align="left">Indiana         </td><td>Noon Fox      </td><td>W 38 - 15 </td><td></td></tr>
 <tr><td>Nov 30</td><td class="has-text-align-left" data-align="left">scUM            </td><td>Noon Fox      </td><td><font color = red>L 10 - 13 </font> </td><td></td></tr>
+<tr><td>Dec 21</td><td class="has-text-align-left" data-align="left">Tennesee (CFP)  </td><td>8:00 ESPN     </td><td>        </td><td></td></tr>
 
 </table></center>
 <center><h3> Some Bowl vs. ??? W 99 - 1  </h3></center>
