--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@ See our <A href="ccf.html"> "adopted" children </A>
 <tr><td>Dec 21</td><td class="has-text-align-left" data-align="left">Tennesee (CFP)  </td><td>8:00 ESPN     </td><td> W 42 - 17  </td><td></td></tr>
 
 </table></center>
-<center><h3> Jan 1. 2025 Rose Bowl vs. Oregon W 99 - 1  </h3></center>
+<center><h3> Jan 1, 2025 Rose Bowl (CFP quarterfinal) vs. Oregon W 41 - 21  </h3></center>
+<center><h3> Jan 10, 2025 Cotton Bowl (CFP Semifinal) vs. Texas W 99 - 1  </h3></center>
 <!-- /wp:table -->
 </table>
 <!--......................................................................................................-->
