--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ See our <A href="ccf.html"> "adopted" children </A>
 </table></center>
 <center><h3> Jan 1, 2025 Rose Bowl (CFP quarterfinal) vs. Oregon W 41 - 21  </h3></center>
 <center><h3> Jan 10, 2025 Cotton Bowl (CFP Semifinal) vs. Texas W 28 - 14  </h3></center>
-<center><h3> Jan 20, 2025 CFP Final vs. Notre Dame W 99 - 1  </h3></center>
+<center><h3> Jan 20, 2025 CFP Final vs. Notre Dame W 34 - 23  National Champs!</h3></center>
 <!-- /wp:table -->
 </table>
 <!--......................................................................................................-->
