--- a/index.html
+++ b/index.html
@@ -43,32 +43,27 @@ See our <A href="ccf.html"> "adopted" children </A>
 
 
 <!--......................................................................................................-->
-<center><h1> 2024 </h1><br></center>
+<center><h1> 2025 </h1><br></center>
 <table border="1" align="center" >
 
-<tr><td>Aug 31</td><td class="has-text-align-left" data-align="left">Akron           </td><td>3:30 CBS      </td><td>W 52 - 6 </td><td>note.............</td></tr>
-<tr><td>Sep 07</td><td class="has-text-align-left" data-align="left">Western Michigan</td><td>7:30 B1G      </td><td>W 56 - 0 </td><td></td></tr>
-<tr><td>Sep 14</td><td class="has-text-align-left" data-align="left"> ---- bye ----  </td><td> -- bye --    </td><td> -- bye -- </td><td> -- bye -- </td></tr>
-<tr><td>Sep 21</td><td class="has-text-align-left" data-align="left">Marshall        </td><td> Noon Fox     </td><td>W 49 - 14 </td><td></td></tr>
-<tr><td>Sep 28</td><td class="has-text-align-left" data-align="left">@ Michigan State</td><td> 7:30 Peacock </td><td>W 38 - 7 </td><td></td></tr>
-<tr><td>Oct 05</td><td class="has-text-align-left" data-align="left">Iowa            </td><td> 3:30 CBS     </td><td>W 35 - 7 </td><td></td></tr>
-<tr><td>Oct 12</td><td class="has-text-align-left" data-align="left">@ Oregon        </td><td> 7:30 NBC     </td><td><font color = red>L 31 - 32 </font> </td><td>  </td></tr>
-<tr><td>Oct 19</td><td class="has-text-align-left" data-align="left"> ---- bye ----  </td><td>-- bye --     </td><td> -- bye -- </td><td> -- bye -- </td></tr>
-<tr><td>Oct 26</td><td class="has-text-align-left" data-align="left">Nebraska        </td><td>Noon Fox      </td><td>W 21 - 17 </td><td></td></tr>
-<tr><td>Nov 02</td><td class="has-text-align-left" data-align="left">@ Penn State    </td><td>Noon Fox      </td><td>W 20 - 13 </td><td> </td></tr>
-<tr><td>Nov 09</td><td class="has-text-align-left" data-align="left">Purdue          </td><td>Noon Fox      </td><td>W 45 - 0  </td><td></td></tr>
-<tr><td>Nov 16</td><td class="has-text-align-left" data-align="left">@ Northwestern  </td><td>Noon BTN      </td><td> W 31 - 7 </td><td>Wrigley Field</td></tr>
-<tr><td>Nov 23</td><td class="has-text-align-left" data-align="left">Indiana         </td><td>Noon Fox      </td><td>W 38 - 15 </td><td></td></tr>
-<tr><td>Nov 30</td><td class="has-text-align-left" data-align="left">scUM            </td><td>Noon Fox      </td><td><font color = red>L 10 - 13 </font> </td><td></td></tr>
-<tr><td>Dec 21</td><td class="has-text-align-left" data-align="left">Tennesee (CFP)  </td><td>8:00 ESPN     </td><td> W 42 - 17  </td><td></td></tr>
+<tr><td>Aug 30</td><td class="has-text-align-left" data-align="left">Texas       </td><td>TBA</td><td>W </td><td>note</td></tr>
+<tr><td>Sep 06</td><td class="has-text-align-left" data-align="left">  </td><td></td><td></td><td></td></tr>
+<tr><td>Sep 13</td><td class="has-text-align-left" data-align="left">Washington</td><td></td><td></td><td></td></tr>
+<tr><td>Sep 20</td><td class="has-text-align-left" data-align="left">    </td><td></td><td></td><td></td></tr>
+<tr><td>Sep 27</td><td class="has-text-align-left" data-align="left">             </td><td></td><td></td><td></td></tr>
+<tr><td>Oct 04</td><td class="has-text-align-left" data-align="left">        </td><td></td><td></td><td></td></tr>
+<tr><td>Oct 11</td><td class="has-text-align-left" data-align="left"> UConn       </td><td></td><td></td><td></td></tr>
+<tr><td>Oct 18</td><td class="has-text-align-left" data-align="left">      </td><td></td><td></td><td></td></tr>
+<tr><td>Oct 25</td><td class="has-text-align-left" data-align="left">     </td><td></td><td></td><td></td></tr>
+<tr><td>Nov 01</td><td class="has-text-align-left" data-align="left">      </td><td></td><td></td><td></td></tr>
+<tr><td>Nov 08</td><td class="has-text-align-left" data-align="left">  </td><td></td><td></td><td></td></tr>
+<tr><td>Nov 15</td><td class="has-text-align-left" data-align="left">       </td><td></td><td></td><td></td></tr>
+<tr><td>Nov 22</td><td class="has-text-align-left" data-align="left">@ scUM          </td><td></td><td></td><td></td></tr>
 
-</table></center>
-<center><h3> Jan 1, 2025 Rose Bowl (CFP quarterfinal) vs. Oregon W 41 - 21  </h3></center>
-<center><h3> Jan 10, 2025 Cotton Bowl (CFP Semifinal) vs. Texas W 28 - 14  </h3></center>
-<center><h3> Jan 20, 2025 CFP Final vs. Notre Dame W 34 - 23  National Champs!</h3></center>
 <!-- /wp:table -->
 </table>
 <!--......................................................................................................-->
+
 <p><center> and M*ch*g*n still sucks!</center>
   <br></p>
 <h3>
