--- a/index.html
+++ b/index.html
@@ -41,25 +41,24 @@ See our <A href="ccf.html"> "adopted" children </A>
 <center><h2>OHIO STATE BUCKEYES <a href="https://ohiostatebuckeyes.com/sports/football/schedule">Football </a> Schedule </h2></center>
 <center><img align=bottom alt="New!" src="Images/new3.gif"></center>
 
-
 <!--......................................................................................................-->
 <center><h1> 2025 </h1><br></center>
 <table border="1" align="center" >
 
-<tr><td>Aug 30</td><td class="has-text-align-left" data-align="left">Texas       </td><td>TBA</td><td>W </td><td>note</td></tr>
-<tr><td>Sep 06</td><td class="has-text-align-left" data-align="left">Grambling  </td><td></td><td></td><td></td></tr>
-<tr><td>Sep 13</td><td class="has-text-align-left" data-align="left">Ohio</td><td></td><td></td><td></td></tr>
-<tr><td>Sep 20</td><td class="has-text-align-left" data-align="left">@Washington    </td><td></td><td></td><td></td></tr>
-<tr><td>Sep 27</td><td class="has-text-align-left" data-align="left"> Bye            </td><td></td><td></td><td></td></tr>
-<tr><td>Oct 04</td><td class="has-text-align-left" data-align="left">Minnesota        </td><td></td><td></td><td></td></tr>
-<tr><td>Oct 11</td><td class="has-text-align-left" data-align="left">@Illinois       </td><td></td><td></td><td></td></tr>
-<tr><td>Oct 18</td><td class="has-text-align-left" data-align="left">@Wisconsin      </td><td></td><td></td><td></td></tr>
-<tr><td>Oct 25</td><td class="has-text-align-left" data-align="left"> Bye    </td><td></td><td></td><td></td></tr>
-<tr><td>Nov 01</td><td class="has-text-align-left" data-align="left">Penn State      </td><td></td><td></td><td></td></tr>
-<tr><td>Nov 08</td><td class="has-text-align-left" data-align="left">@Purdue  </td><td></td><td></td><td></td></tr>
-<tr><td>Nov 15</td><td class="has-text-align-left" data-align="left">UCLA       </td><td></td><td></td><td></td></tr>
-<tr><td>Nov 22</td><td class="has-text-align-left" data-align="left">Rutgers          </td><td></td><td></td><td></td></tr>
-<tr><td>Nov 29</td><td class="has-text-align-left" data-align="left">@ scUM          </td><td></td><td></td><td></td></tr>
+<tr><td>Aug 30</td><td class="has-text-align-left" data-align="left">Texas      </td><td>TBA</td><td>W </td><td>note</td></tr>
+<tr><td>Sep 06</td><td class="has-text-align-left" data-align="left">Grambling  </td><td>TBA</td><td>W</td><td>  </td></tr>
+<tr><td>Sep 13</td><td class="has-text-align-left" data-align="left">Ohio       </td><td>TBA</td><td>W</td><td>  </td></tr>
+<tr><td>Sep 20</td><td class="has-text-align-left" data-align="left">@Washington </td><td>TBA</td><td>W</td><td>  </td></tr>
+<tr><td>Sep 27</td><td class="has-text-align-left" data-align="left"> -- Bye -- </td><td>TBA</td><td>W</td><td>  </td></tr>
+<tr><td>Oct 04</td><td class="has-text-align-left" data-align="left">Minnesota  </td><td>TBA</td><td>W</td><td>  </td></tr>
+<tr><td>Oct 11</td><td class="has-text-align-left" data-align="left">@Illinois  </td><td>TBA</td><td>W</td><td>  </td></tr>
+<tr><td>Oct 18</td><td class="has-text-align-left" data-align="left">@Wisconsin </td><td>TBA</td><td>W</td><td>  </td></tr>
+<tr><td>Oct 25</td><td class="has-text-align-left" data-align="left"> -- Bye -- </td><td>TBA</td><td>W</td><td>  </td></tr>
+<tr><td>Nov 01</td><td class="has-text-align-left" data-align="left">Penn State </td><td>TBA</td><td>W</td><td>  </td></tr>
+<tr><td>Nov 08</td><td class="has-text-align-left" data-align="left">@Purdue    </td><td>TBA</td><td>W</td><td>  </td></tr>
+<tr><td>Nov 15</td><td class="has-text-align-left" data-align="left">UCLA       </td><td>TBA</td><td>W</td><td>  </td></tr>
+<tr><td>Nov 22</td><td class="has-text-align-left" data-align="left">Rutgers    </td><td>TBA</td><td>W</td><td>  </td></tr>
+<tr><td>Nov 29</td><td class="has-text-align-left" data-align="left">@ scUM     </td><td>TBA</td><td>W</td><td>  </td></tr>
 
 <!-- /wp:table -->
 </table>
