--- a/osu24.html
+++ b/osu24.html
@@ -8,7 +8,7 @@
 <center><h2>OHIO STATE BUCKEYES <a href="https://www.ohiostatebuckeyes.com/sports/m-footbl/sched/osu-m-footbl-sched.html">Football </a> Schedule </h2></center>
 <center><img align=bottom alt="New!" src="Images/new3.gif"></center>
 
-<h1> 2024 </h1><br></center>
+<center><h1> 2024 </h1><br></center>
 <table border="1" align="center" >
 
 <tr><td>Aug 31</td><td class="has-text-align-left" data-align="left">Akron           </td><td>3:30 CBS      </td><td>W 52 - 6 </td><td>note.............</td></tr>
