--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@ See our <A href="ccf.html"> "adopted" children </A>
 <center><h1> 2025 </h1><br></center>
 <table border="1" align="center" >
 
-<tr><td>Aug 30</td><td class="has-text-align-left" data-align="left">Texas      </td><td>TBA</td><td>W </td><td>note</td></tr>
+<tr><td>Aug 30</td><td class="has-text-align-left" data-align="left">Texas      </td><td>TBA</td><td>W ----- </td><td>note -----</td></tr>
 <tr><td>Sep 06</td><td class="has-text-align-left" data-align="left">Grambling  </td><td>TBA</td><td>W</td><td>  </td></tr>
 <tr><td>Sep 13</td><td class="has-text-align-left" data-align="left">Ohio       </td><td>TBA</td><td>W</td><td>  </td></tr>
-<tr><td>Sep 20</td><td class="has-text-align-left" data-align="left">@Washington </td><td>TBA</td><td>W</td><td>  </td></tr>
+<tr><td>Sep 20</td><td class="has-text-align-left" data-align="left">@Washington</td><td>TBA</td><td>W</td><td>  </td></tr>
 <tr><td>Sep 27</td><td class="has-text-align-left" data-align="left"> -- Bye -- </td><td>TBA</td><td>W</td><td>  </td></tr>
 <tr><td>Oct 04</td><td class="has-text-align-left" data-align="left">Minnesota  </td><td>TBA</td><td>W</td><td>  </td></tr>
 <tr><td>Oct 11</td><td class="has-text-align-left" data-align="left">@Illinois  </td><td>TBA</td><td>W</td><td>  </td></tr>
