--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ See our <A href="ccf.html"> "adopted" children </A>
 <tr><td>Nov 08</td><td class="has-text-align-left" data-align="left">@Purdue    </td><td>TBA</td><td>W</td><td>  </td></tr>
 <tr><td>Nov 15</td><td class="has-text-align-left" data-align="left">UCLA       </td><td>TBA</td><td>W</td><td>  </td></tr>
 <tr><td>Nov 22</td><td class="has-text-align-left" data-align="left">Rutgers    </td><td>TBA</td><td>W</td><td>  </td></tr>
-<tr><td>Nov 29</td><td class="has-text-align-left" data-align="left">@ scUM     </td><td>TBA</td><td>W</td><td>  </td></tr>
+<tr><td>Nov 29</td><td class="has-text-align-left" data-align="left">@ scUM     </td><td>Noon Fox</td><td>W</td><td>  </td></tr>
 
 <!-- /wp:table -->
 </table>
