--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@ See our <A href="ccf.html"> "adopted" children </A>
 <center><h1> 2025 </h1><br></center>
 <table border="1" align="center" >
 
-<tr><td>Aug 30</td><td class="has-text-align-left" data-align="left">Texas      </td><td>Noon Fox</td><td>W ----- </td><td>note -----</td></tr>
+<tr><td>Aug 30</td><td class="has-text-align-left" data-align="left">Texas      </td><td>Noon Fox</td><td>W 14 - 7 </td><td>
+#3 beat #1</td></tr>
 <tr><td>Sep 06</td><td class="has-text-align-left" data-align="left">Grambling  </td><td>3:30 BTN</td><td>W</td><td>  </td></tr>
 <tr><td>Sep 13</td><td class="has-text-align-left" data-align="left">Ohio       </td><td>7:00 Peacock</td><td>W</td><td>  </td></tr>
 <tr><td>Sep 20</td><td class="has-text-align-left" data-align="left">@Washington</td><td>TBA</td><td>W</td><td>  </td></tr>
