--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ See our <A href="ccf.html"> "adopted" children </A>
 
 <tr><td>Aug 30</td><td class="has-text-align-left" data-align="left">Texas      </td><td>Noon Fox</td><td>W 14 - 7 </td><td>
 #3 beat #1</td></tr>
-<tr><td>Sep 06</td><td class="has-text-align-left" data-align="left">Grambling  </td><td>3:30 BTN</td><td>W</td><td>  </td></tr>
+<tr><td>Sep 06</td><td class="has-text-align-left" data-align="left">Grambling  </td><td>3:30 BTN</td><td>W 70 - 0 </td><td>  </td></tr>
 <tr><td>Sep 13</td><td class="has-text-align-left" data-align="left">Ohio       </td><td>7:00 Peacock</td><td>W</td><td>  </td></tr>
 <tr><td>Sep 20</td><td class="has-text-align-left" data-align="left">@Washington</td><td>TBA</td><td>W</td><td>  </td></tr>
 <tr><td>Sep 27</td><td class="has-text-align-left" data-align="left"> -- Bye -- </td><td>TBA</td><td>W</td><td>  </td></tr>
