--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ See our <A href="ccf.html"> "adopted" children </A>
 <tr><td>Sep 13</td><td class="has-text-align-left" data-align="left">Ohio       </td><td>7:00 Peacock</td><td>W 37 - 9 </td><td>  </td></tr>
 <tr><td>Sep 20</td><td class="has-text-align-left" data-align="left"> -- Bye -- </td><td>Bye</td><td>bye</td><td>  </td></tr>
 <tr><td>Sep 27</td><td class="has-text-align-left" data-align="left">@Washington</td><td>3:30 CBS</td><td>W 24 - 6 </td><td>  </td></tr>
-<tr><td>Oct 04</td><td class="has-text-align-left" data-align="left">Minnesota  </td><td>TBA</td><td>W</td><td>  </td></tr>
+<tr><td>Oct 04</td><td class="has-text-align-left" data-align="left">Minnesota  </td><td>7:30 NBC</td><td>W</td><td>  </td></tr>
 <tr><td>Oct 11</td><td class="has-text-align-left" data-align="left">@Illinois  </td><td>TBA</td><td>W</td><td>  </td></tr>
 <tr><td>Oct 18</td><td class="has-text-align-left" data-align="left">@Wisconsin </td><td>TBA</td><td>W</td><td>  </td></tr>
 <tr><td>Oct 25</td><td class="has-text-align-left" data-align="left"> -- Bye -- </td><td>TBA</td><td>W</td><td>  </td></tr>
