--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ See our <A href="ccf.html"> "adopted" children </A>
 <tr><td>Oct 18</td><td class="has-text-align-left" data-align="left">@Wisconsin </td><td>3:30 CBS </td><td> W 34 - 0  </td><td>  </td></tr>
 <tr><td>Oct 25</td><td class="has-text-align-left" data-align="left"> -- Bye -- </td><td> Bye     </td><td> bye </td><td>  </td></tr>
 <tr><td>Nov 01</td><td class="has-text-align-left" data-align="left">Penn State </td><td> Noon Fox </td><td>W 38 - 14 </td><td>  </td></tr>
-<tr><td>Nov 08</td><td class="has-text-align-left" data-align="left">@Purdue    </td><td>1:00 BTN </td><td> W</td><td>  </td></tr>
+<tr><td>Nov 08</td><td class="has-text-align-left" data-align="left">@Purdue    </td><td>1:00 BTN </td><td> W 34 - 10 </td><td>  </td></tr>
 <tr><td>Nov 15</td><td class="has-text-align-left" data-align="left">UCLA       </td><td>7:30 NBC </td><td> W</td><td>  </td></tr>
 <tr><td>Nov 22</td><td class="has-text-align-left" data-align="left">Rutgers    </td><td>TBA</td><td> W</td><td>  </td></tr>
 <tr><td>Nov 29</td><td class="has-text-align-left" data-align="left">@ scUM     </td><td>Noon Fox</td><td> W</td><td>  </td></tr>
@@ -180,6 +180,7 @@ Email: <a href="mailto:dnorris@REMOVEroadrunner.com?subject=Great Page"> DrDave 
 <p align=center>&copy; 1995 D. Norris Inc., Property of Dr Dave</p>
 
 </bodyl>
+
 
 
 
