--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ See our <A href="ccf.html"> "adopted" children </A>
 <tr><td>Nov 08</td><td class="has-text-align-left" data-align="left">@Purdue    </td><td>1:00 BTN </td><td> W 34 - 10 </td><td>  </td></tr>
 <tr><td>Nov 15</td><td class="has-text-align-left" data-align="left">UCLA       </td><td>7:30 NBC </td><td> W 48 - 10 </td><td>  </td></tr>
 <tr><td>Nov 22</td><td class="has-text-align-left" data-align="left">Rutgers    </td><td>Noon Fox</td><td> W 42 - 9 </td><td>  </td></tr>
-<tr><td>Nov 29</td><td class="has-text-align-left" data-align="left">@ scUM     </td><td>Noon Fox</td><td> W 27 - 9 </td><td> Ho-Ho-Ho </td></tr>
+<tr><td>Nov 29</td><td class="has-text-align-left" data-align="left">@ scUM     </td><td>Noon Fox</td><td> W 27 - 9 </td><td> #1 v #15 in the snow </td></tr>
 <tr><td>Dec 06</td><td class="has-text-align-left" data-align="left">@B1G v Indiana </td><td>Noon Fox</td><td> W  </td><td> B1G Championship </td></tr>
 
 <!-- /wp:table -->
@@ -181,6 +181,7 @@ Email: <a href="mailto:dnorris@REMOVEroadrunner.com?subject=Great Page"> DrDave 
 <p align=center>&copy; 1995 D. Norris Inc., Property of Dr Dave</p>
 
 </bodyl>
+
 
 
 
