--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@ See our <A href="ccf.html"> "adopted" children </A>
 <tr><td>Nov 22</td><td class="has-text-align-left" data-align="left">Rutgers    </td><td>Noon Fox </td><td> W 42 - 9 </td><td>  </td></tr>
 <tr><td>Nov 29</td><td class="has-text-align-left" data-align="left">@ scUM     </td><td>Noon Fox </td><td> W 27 - 9 </td><td> #1 v #15 in the snow </td></tr>
 <tr><td>Dec 06</td><td class="has-text-align-left" data-align="left">@B1G v Indiana </td><td>6:30 Fox </td><td> L 10 - 13 </td><td> B1G Championship </td></tr>
+</table></center>
+
+<center><h3> Dec 31, 2025 Cotton Bowl (CFP quarterfinal) vs. ??? W   </h3></center>
+<center><h3> Jan 8-9, 2026  Fiesta/Peach Bowl (CFP Semifinal) vs. ??   </h3></center>
+<center><h3> Jan 19, 2026 CFP Final vs. ??? W   National Champs!</h3></center>
 
 <!-- /wp:table -->
 </table>
@@ -181,6 +186,7 @@ Email: <a href="mailto:dnorris@REMOVEroadrunner.com?subject=Great Page"> DrDave 
 <p align=center>&copy; 1995 D. Norris Inc., Property of Dr Dave</p>
 
 </bodyl>
+
 
 
 
